# z-edit

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  README.md  _config.yml  edit.py  pyproject.toml  setup-env.sh  zedit.py
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
cmake/: packaging.cmake
config/: default.toml
debian/: changelog  control  copyright  edit.links  postinst  postrm  rules
docs/: _config.yml  build.md  cicd-guide.md  design.md  github-actions.md  index.md  user-guide.md
scripts/: QUICKREF.py  README.md  activate.sh  dev.py  release.py  with-venv
tests/: test_smoke.py
