[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edit"
version = "0.1.0"
description = "Smart file editor launcher — opens files in the right editor based on MIME type or extension"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["editor", "mime", "launcher", "cli"]

# python-magic is optional but strongly recommended for accurate MIME detection
dependencies = []

[project.optional-dependencies]
magic = ["python-magic"]

[project.scripts]
edit = "edit:main"
ed   = "edit:main"

[tool.setuptools]
py-modules = ["edit"]
