[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zedit"
version = "0.6.5"
description = "Smart file editor launcher — opens files in the right editor based on MIME type or extension"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["editor", "mime", "launcher", "cli"]
authors = [{name = "zedit contributors", email = "dev@example.com"}]

[project.urls]
Homepage = "https://github.com/pilakkat1964/z-edit"
Repository = "https://github.com/pilakkat1964/z-edit"
Documentation = "https://pilakkat.mywire.org/z-edit/"
"Bug Tracker" = "https://github.com/pilakkat1964/z-edit/issues"

[project.classifiers]
"Programming Language :: Python :: 3"
"Programming Language :: Python :: 3.11"
"Programming Language :: Python :: 3.12"
"Development Status :: 4 - Beta"
"License :: OSI Approved :: MIT License"
"Topic :: System :: Shells"
"Topic :: Utilities"

# python-magic is optional but strongly recommended for accurate MIME detection
dependencies = []

[project.optional-dependencies]
magic = ["python-magic>=0.4.27"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
zedit = "zedit:main"
ze    = "zedit:main"

[tool.hatch.build.targets.wheel]
packages = ["zedit.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.uv.sources]
# Optional: Add source configurations here if needed

# Tool configurations
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["zedit.py"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
